Update 1.1 Javascript의 동등 비교.md

--- a/1.1 Javascript의 동등 비교.md
+++ b/1.1 Javascript의 동등 비교.md
@@ -1,4 +1,4 @@
-![image](https://github.com/user-attachments/assets/89e008af-36c7-454d-a004-efab2d2ca33a)![image](https://github.com/user-attachments/assets/f5ccf2a7-4177-40f3-849e-6dafbb7a5bcd)![image](https://github.com/user-attachments/assets/4d5047d8-0257-4a2d-b83a-fd12e5940e1e)![image](https://github.com/user-attachments/assets/7f4985a1-07ef-418c-a417-b5ef61999996)![image](https://github.com/user-attachments/assets/bce50a8d-56de-4e35-a654-01ac3473355f)![image](https://github.com/user-attachments/assets/acc720fd-e0f3-491d-9062-39c9d85b57fd)![image](https://github.com/user-attachments/assets/fb61c767-e965-469a-a1d1-580116f8775f)![image](https://github.com/user-attachments/assets/6136d330-37e9-46ce-9de1-49e8caaaedca)![image](https://github.com/user-attachments/assets/5e2f64aa-7908-459b-bcd4-614dab0d4f82)##자바스크립트의 동등 비교의 필요성?
+자바스크립트의 동등 비교의 필요성?
 
 리액트의 가상 DOM과 실제 DOM의 비교, 리액트 컴포넌트가 렌더링할지를 판단하는 방법, 변수나 함수의 메모제이션 등 모든 작업은 자바스크립트의 동등 비교를 기반으로 한다.
 
