--- a/2.5 메모이제이션.md
+++ b/2.5 메모이제이션.md
@@ -1,4 +1,4 @@
-![image](https://github.com/user-attachments/assets/b770bf4c-fa07-48d0-a2a2-7c3548e39ecd)# 컴포넌트와 함수의 무거운 연산을 기억해 두는 메모이제이션
+@ 컴포넌트와 함수의 무거운 연산을 기억해 두는 메모이제이션
 
 리액트에서 제공하는 API 중 useMemo, useCallback 훅과 고차 컴포넌트인 React.memo는 리액트에서 발생하는 렌더링을 최소한으로 줄이기 위해서 제공
 
@@ -116,4 +116,28 @@ export default function App() {
 
 ```
 
+위 useMath 훅을 살펴보자. 이 훅은 인수로 넘겨주는 값이 변하지 않는 이상 같은 값을 가지고 있어야 하는데, 실제로 handleclick으로 렌더링을 강제로 일으켜 보면 console, log가 출력되는 것을 볼 수 있다. 
 
+왜 그럴까? 함수형 컴포넌트인 App이 호출되면서 useMath가 계속해서 호출되고, 객체 내부의 값 같지만 참조가 변경되기 때문이다
+
+
+```javascript
+function useMath(number: number) {
+  const [double, setDouble] = 니seState(0);
+  const [triple, setTriple] = useState(0);
+  useEffect(() => {
+    setDouble(number * 2);
+    setTriple(number * 3);
+  }, [number]);
+  return useMemo(() => ({ double, triple }), [double, triple]);
+}
+
+```
+
+useMath의 반환값을 useMemo로 감싼다면 값이 변경되지 않는 한 같은 결과물을 가질 수 있고, 그 덕분에 사용하는 쪽에서도 참조의 투명성을 유지할 수 있게 된다. 
+
+즉, 메모이제이션은 컴포넌트 자신의 리렌더링뿐만 아니라 이를 사용하는 쪽에서도 변하지 않는 고정된 값을 사용할 수 있다는 믿음을 줄 수 있다.
+
+정리하자면, 메모이제이션은 하지 않는 것보다 메모이제이션했을 때 더 많은 이점을 누릴 수 있다. <br/>
+이것이 비록 섣부른 초기화라 할지라도 했을 때 누릴 수 있는 이점, 그리고 이를 실수로 빠트렸을 때 치러야 할 위험 비용이 더 크기 때문에 최적화에 대한 확신이 없다면 
+가능한 한 모든 곳에 메모이제이션을 활용한 최적화를 하는 것이 좋다.
