--- a/2.5 메모이제이션.md
+++ b/2.5 메모이제이션.md
@@ -237,3 +237,7 @@ const MemoizationExample = () => {
 export default MemoizationExample;
 
 ```
+
+
+![image](https://github.com/user-attachments/assets/ffb08081-9d3b-47cd-9b26-29aa1f231c4e)
+
