--- a/2.5 메모이제이션.md
+++ b/2.5 메모이제이션.md
@@ -1,4 +1,4 @@
-# 컴포넌트와 함수의 무거운 연산을 기억해 두는 메모이제이션
+![image](https://github.com/user-attachments/assets/02742a04-4f97-4b14-857c-2c350989e9d8)# 컴포넌트와 함수의 무거운 연산을 기억해 두는 메모이제이션
 
 리액트에서 제공하는 API 중 useMemo, useCallback 훅과 고차 컴포넌트인 React.memo는 리액트에서 발생하는 렌더링을 최소한으로 줄이기 위해서 제공
 
@@ -240,4 +240,9 @@ export default MemoizationExample;
 
 
 ![image](https://github.com/user-attachments/assets/ffb08081-9d3b-47cd-9b26-29aa1f231c4e)
+
+
+- useMemo: 계산 비용이 높은 값을 메모이제이션(캐싱)하여 불필요한 재계산을 방지. 
+- useCallback: 함수를 메모이제이션하여 불필요한 리렌더링을 방지하고 참조 안정성을 제공. 
+
 
