--- a/2.5 메모이제이션.md
+++ b/2.5 메모이제이션.md
@@ -1,4 +1,4 @@
-# 컴포넌트와 함수의 무거운 연산을 기억해 두는 메모이제이션
+![image](https://github.com/user-attachments/assets/088eaab1-cdbb-4267-af88-3ab3a2ff9559)# 컴포넌트와 함수의 무거운 연산을 기억해 두는 메모이제이션
 
 리액트에서 제공하는 API 중 useMemo, useCallback 훅과 고차 컴포넌트인 React.memo는 리액트에서 발생하는 렌더링을 최소한으로 줄이기 위해서 제공
 
@@ -244,5 +244,93 @@ export default MemoizationExample;
 
 - useMemo: 계산 비용이 높은 값을 메모이제이션(캐싱)하여 불필요한 재계산을 방지. 
 - useCallback: 함수를 메모이제이션하여 불필요한 리렌더링을 방지하고 참조 안정성을 제공. 
+
+
+
+***
+# React.memo() 예시
+
+```javascript
+import React, { useState, useCallback } from "react";
+
+// 자식 컴포넌트의 props 타입 정의
+interface ChildProps {
+  name: string;
+  onClick: () => void;
+}
+
+// 메모이제이션된 자식 컴포넌트
+const MemoizedChildComponent: React.FC<ChildProps> = React.memo(
+  ({ name, onClick }) => {
+    console.log(`Child component "${name}" rendered`);
+    return (
+      <div className="p-4 m-2 bg-gray-100 rounded">
+        <p>Hello, {name}!</p>
+        <button
+          onClick={onClick}
+          className="mt-2 px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600"
+        >
+          Click me
+        </button>
+      </div>
+    );
+  }
+);
+
+// 부모 컴포넌트
+const ParentComponent: React.FC = () => {
+  const [count1, setCount1] = useState<number>(0);
+  const [count2, setCount2] = useState<number>(0);
+
+  const incrementCount1 = useCallback(() => {
+    setCount1((c) => c + 1);
+  }, []);
+
+  const incrementCount2 = useCallback(() => {
+    setCount2((c) => c + 1);
+  }, []);
+
+  console.log("Parent component rendered");
+
+  return (
+    <div className="p-4">
+      <h1 className="text-2xl font-bold mb-4">React.memo Example</h1>
+      <p className="mb-2">Parent Count 1: {count1}</p>
+      <p className="mb-4">Parent Count 2: {count2}</p>
+
+      <MemoizedChildComponent name="Child 1" onClick={incrementCount1} />
+      <MemoizedChildComponent name="Child 2" onClick={incrementCount2} />
+
+      <div className="mt-4 p-4 bg-yellow-100 rounded">
+        <p className="font-semibold">설명:</p>
+        <ul className="list-disc list-inside">
+          <li>각 자식 컴포넌트는 React.memo로 래핑되어 있습니다.</li>
+          <li>버튼을 클릭하면 해당 자식 컴포넌트의 카운터만 증가합니다.</li>
+          <li>콘솔을 확인하여 어떤 컴포넌트가 리렌더링되는지 관찰하세요.</li>
+          <li>
+            한 자식의 상태가 변경되어도 다른 자식은 리렌더링되지 않습니다.
+          </li>
+        </ul>
+      </div>
+    </div>
+  );
+};
+
+export default ParentComponent;
+
+
+```
+
+![image](https://github.com/user-attachments/assets/5d0ece51-0b16-428a-99a5-67652dc2c012)
+
+- React.memo는 컴포넌트의 불필요한 리렌더링을 방지하여 성능을 최적화하는 고차 컴포넌트(Higher-Order Component)입니다.
+
+
+- 주요 포인트
+1. React.memo는 props의 변화를 체크합니다.
+2. count (자식 컴포넌트에서) 상태 변경은 부모 컴포넌트의 리렌더링을 유발합니다.
+
+***
+
 
 
