--- a/2.5 메모이제이션.md
+++ b/2.5 메모이제이션.md
@@ -1,4 +1,4 @@
-![image](https://github.com/user-attachments/assets/088eaab1-cdbb-4267-af88-3ab3a2ff9559)# 컴포넌트와 함수의 무거운 연산을 기억해 두는 메모이제이션
+# 컴포넌트와 함수의 무거운 연산을 기억해 두는 메모이제이션
 
 리액트에서 제공하는 API 중 useMemo, useCallback 훅과 고차 컴포넌트인 React.memo는 리액트에서 발생하는 렌더링을 최소한으로 줄이기 위해서 제공
 
