--- a/3.1.2 useEffect.md
+++ b/3.1.2 useEffect.md
@@ -13,7 +13,7 @@
 이러한 useEffect에 대한 정의는 어누 정도 옳지만 완전히 정확하지는 않다.
 그리고 알려진 것 처럼 생명주기 메서드를 대체하기 위해 만들어진 hook도 아니다.
 
-useEffect의 정의를 정확하게 내리자면 useEffect는 Application 내 Component의 여러 값들을 활용해 동기적으로 부수 효과를 만드는 매너키즘이다. 
+useEffect의 정의를 정확하게 내리자면 useEffect는 Application 내 Component의 여러 값들을 활용해 동기적으로 부수 효과를 만드는 매커니즘이다. 
 
 그리고 이 부수 효과가 '언제' 일어나는지보다 어떤 상태값과 함께 실행되는지 살펴보는 것이 중요하다.
 
